--- a/client/kohua/index.html
+++ b/client/kohua/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Indulge in the world of exquisite teas. Explore a diverse selection of premium loose leaf teas, from classic black and green teas to rare herbal and oolong blends. Elevate your tea experience with our handcrafted, high-quality leaves sourced from renowned tea gardens. Sip, savor, and discover the true essence of tea with us."
     />
-    <link rel="icon" href="/client/kohua/src/assets/images/kohua-logo.png" sizes="32x32"/>
+    <link rel="icon" href="./src/assets/images/kohua-logo.png" sizes="32x32"/>
   </head>
   <body>
     <div id="root"></div>
